test/fail/error_coercion6.sest
module ErrorCoercion6 = struct
  module Sub :> sig
    type t :: o
    val make : fun(int) -> t
  end = struct
    type t = int
    val make(x) = x
  end

  val main() =
    Sub.make(5) + 1
end
